Correct booking spacing

--- a/app/assets/stylesheets/pages/_listing_show.scss
+++ b/app/assets/stylesheets/pages/_listing_show.scss
@@ -7,17 +7,19 @@
 }
 
 .listing-view__dates-form {
-  margin: 10rem 0 0 5rem;
-  background-color: rgba($color: #181818, $alpha: 0.3);
-  border-radius: 1%;
-  height: 21rem;
-  padding: 2.5rem 0 0 5rem;
+  margin-top: 10rem;
+  // background-color: rgba($color: #181818, $alpha: 0.3);
+  // border-radius: 1%;
+  // height: 21rem;
+  // padding: 2.5rem 0 0 5rem;
 }
 
 .listing-view__form-guest-number {
+  padding-right: 20rem;
 }
 
 .listing_view__form-button {
-  margin: 3.4rem 2rem 0 2rem;
+  margin: 0rem 0 0 6rem;
   padding: 0 5rem;
+  margin-left: 11rem;
 }
